--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2053,7 +2053,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   shop_for_products_html: "Shop for <span class=\"turquoise\">%{enterprise}</span> products at:"
   change_shop: "Change shop to:"
   shop_at: "Shop now at:"
-  price_breakdown: "Full price breakdown"
+  price_breakdown: "Price breakdown"
   admin_fee: "Admin fee"
   sales_fee: "Sales fee"
   packing_fee: "Packing fee"
