Update all locales with the latest Transifex translations

--- a/config/locales/en_FR.yml
+++ b/config/locales/en_FR.yml
@@ -1248,9 +1248,9 @@ en_FR:
   menu_3_url: "/producers"
   menu_4_title: "Groups"
   menu_4_url: "/groups"
-  menu_5_title: "About"
+  menu_5_title: "Open my shop"
   menu_5_url: "https://apropos.coopcircuits.fr/"
-  menu_6_title: "Connect"
+  menu_6_title: "About"
   menu_6_url: "https://apropos.coopcircuits.fr/blog/"
   menu_7_title: "Learn"
   menu_7_url: "https://apropos.coopcircuits.fr/ressources/"
