--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2518,7 +2518,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     admin:
       enterprise_limit_reached: "You have reached the standard limit of enterprises per account. Write to %{contact_email} if you need to increase it."
       modals:
-        got_it: Got it
+        got_it: "Got it"
         close: "Close"
         invite: "Invite"
         invite_title: "Invite an unregistered user"
@@ -2538,6 +2538,10 @@ See the %{link} to find out more about %{sitename}'s features and to start using
           customer_tagged_rules_text: >
             By creating rules related to a specific customer tag, you can override the default
             behaviour (whether it be to show or to hide items) for customers with the specified tag.
+        terms_and_conditions_info:
+          title: "Uploading Terms and Conditions"
+          message_1: "Terms and Conditions are the contract between you, the seller, and the shopper. If you upload a file here shoppers must accept your Terms and Conditions in order to complete checkout. For the shopper this will appear as a checkbox at checkout that must be checked in order to proceed with checkout. We highly recommend you upload Terms and Conditions in alignment with national legislation."
+          message_2: "Shoppers will only be required to accept Terms and Conditions once. However if you change you Terms and Conditions shoppers will again be required to accept them before they can checkout."
       panels:
         save: SAVE
         saved: SAVED
