--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -444,6 +444,7 @@ en:
         duplicate_code: "This code is used already."
         bill_address: "Billing Address"
         ship_address: "Shipping Address"
+        balance: "Balance"
         update_address_success: 'Address updated successfully.'
         update_address_error: 'Sorry! Please input all of the required fields!'
         edit_bill_address: 'Edit Billing Address'
