--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1286,6 +1286,9 @@ en:
         require_customer_html: "If you'd like to start shopping here, please %{contact} %{enterprise} to ask about joining."
       select_oc:
         select_oc_html: "Please <span class='highlighted'>choose when you want your order</span>, to see what products are available."
+    products:
+      summary:
+        bulk: "Bulk"
 
   # Front-end controller translations
   card_could_not_be_updated: Card could not be updated
@@ -1704,7 +1707,6 @@ See the %{link} to find out more about %{sitename}'s features and to start using
   products_updating_cart: "Updating cart..."
   products_cart_empty: "Cart empty"
   products_edit_cart: "Edit your cart"
-  products_bulk: "Bulk"
   products_from: from
   products_change: "No changes to save."
   products_update_error: "Saving failed with the following error(s):"
