--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -204,7 +204,7 @@ en_US:
   cancel_order: "Cancel Order"
   confirm_send_invoice: "An invoice for this order will be sent to the customer. Are you sure you want to continue?"
   confirm_resend_order_confirmation: "Are you sure you want to resend the order confirmation email?"
-  must_have_valid_business_number: " %{enterprise_name}must have a Tax ID or W9  before invoices can be sent."
+  must_have_valid_business_number: " %{enterprise_name}must have a business identifier, Tax ID or W9  before invoices can be sent."
   invoice: "Invoice"
   more: "More"
   say_no: "No"
