--- a/config/locales/es_CO.yml
+++ b/config/locales/es_CO.yml
@@ -188,7 +188,7 @@ es_CO:
   title: "Open Food Network"
   welcome_to: "Bienvenido a"
   site_meta_description: "Nosotros empezamos desde abajo. Con granjeros y productores listos para contar sus historias con orgullo y autenticidad. Con distribuidores listos para conectar gente con productos de forma justa y honesta. Con compradores que creen que mejores decisiones de compras semanales pueden..."
-  search_by_name: Buscar por nombre o cantón...
+  search_by_name: Buscar por nombre o municipio...
   producers_join: Los productores colombianos ahora son bienvenidos a unirse a Open Food Network.
   charges_sales_tax: ¿Cargos de IVA?
   print_invoice: "Imprimir factura"
@@ -1530,7 +1530,7 @@ es_CO:
   shopping_oc_last_closed: "El último ciclo cerró hace %{distance_of_time}"
   shopping_oc_next_open: "El próximo ciclo abrirá en %{distance_of_time}"
   shopping_oc_select: "Seleccionar"
-  shopping_tabs_home: "Inicio"
+  shopping_tabs_home: "Bienvenidos"
   shopping_tabs_shop: "Tienda"
   shopping_tabs_about: "Acerca de"
   shopping_tabs_contact: "Contacto"
