Fix Javascript date format for some languages like :it or :pt. I think our translators or automatic translations has misstranslated these formats. I copy the formats on spree_i18n gem from here: https://github.com/spree-contrib/spree_i18n/tree/1-3-stable/config/locales

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -3336,8 +3336,8 @@ ca:
           or_enter_new_card: "O bé introdueix els detalls d'una nova targeta:"
           remember_this_card: Recordar aquesta targeta?
     date_picker:
-      format: '%d-% m-% Y'
-      js_format: 'dd-mm-yy'
+      format: ! '%Y/%m/%d'
+      js_format: 'yy/mm/dd'
     orders:
       error_flash_for_unavailable_items: "Un ítem del teu carret ja no està disponible. Sis plau actualitza les quantitats seleccionades."
       edit:
