--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -3319,7 +3319,7 @@ it:
           remember_this_card: Ricordare questa Carta?
     date_picker:
       format: '%Y-%m-%d'
-      js_format: 'aa-mm-gg'
+      js_format: 'yy/mm/dd'
     orders:
       error_flash_for_unavailable_items: "Un oggetto nel tuo carrello è diventato non disponibile, Per favore aggiorna le quantità selezionate."
       edit:
