--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3104,6 +3104,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     back_to_taxonomies_list: "Back to Taxonomies List"
 
     shipping_methods: "Shipping Methods"
+    shipping_method: "Shipping Method"
 
     shipping_categories: "Shipping Categories"
     new_shipping_category: "New Shipping Category"
