Copy translations from Transifex

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1387,7 +1387,7 @@ fr:
       cookies_policy_link: "politique de cookies"
       cookies_accept_button: "Accepter les cookies"
   home_shop: Faire mes courses
-  brandstory_headline: "NOUVEAU : on change de nom !"
+  brandstory_headline: "On change de nom !"
   brandstory_intro: "Votre plateforme Open Food France change de nom et devient CoopCircuits, une plateforme libre, cogérée et accessible à tous."
   brandstory_part1: "Le service proposé est basé sur le logiciel libre Open Food Network. Les organisateurs de circuits courts qui utilisent la plateforme décident ensemble des évolutions à apporter au logiciel, et gèrent conjointement l’activité de la coopérative CoopCircuits. Ils décident notamment du prix qu’ils paieront pour utiliser cette plateforme."
   brandstory_part2: "Afin de permettre à tout type d’initiative de circuit court de fonctionner efficacement, les offres proposées s’adaptent à la diversité des modèles économiques : que vous gériez un groupement d’achat bénévolement, ou pilotiez une entreprise familiale de distribution, CoopCircuits vous accompagne :-)"
@@ -1997,6 +1997,7 @@ fr:
   calculator: "Calculateur"
   calculator_values: "Valeurs applicables"
   calculator_settings_warning: "Si vous modifiez le type de calculateur, vous devez sauvegarder avant de modifier les paramètres du calculateur."
+  calculator_preferred_unit_error: "doit être kg ou lb"
   flat_percent_per_item: "Pourcentage net"
   flat_rate_per_item: "Montant fixe par article"
   flat_rate_per_order: "Montant fixe par commande"
@@ -3011,7 +3012,7 @@ fr:
     inventory_error_flash_for_insufficient_quantity: "Un produit de votre panier n'est plus disponible."
     inventory: Catalogue boutique
     zipcode: Code postal
-    weight: Poids (au kg)
+    weight: Poids (par kg ou lb)
     error_user_destroy_with_orders: "Les utilisateurs avec des commandes finalisées pourraient ne pas être supprimés"
     cannot_create_payment_without_payment_methods: "Vous ne pouvez pas ajouter un paiement pour une commande sans avoir défini de méthode de paiement au préalable."
     please_define_payment_methods: "Il faut que vous définissiez une méthode de paiement avant tout !"
