add more specific copy on cc authorization

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3704,7 +3704,7 @@ See the %{link} to find out more about %{sitename}'s features and to start using
         saved_cards_popover: This is the list of cards you have opted to save for later use. Your 'default' will be selected automatically when you checkout an order, and can be charged by any shops you have allowed to do so (see right).
       authorised_shops:
         shop_name: "Shop Name"
-        allow_charges?: "Allow Charges?"
+        allow_charges?: "Allow Charges to Default Card?"
     localized_number:
       invalid_format: has an invalid format. Please enter a number.
     api:
