Update all locales with the latest Transifex translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1610,8 +1610,8 @@ ar:
   components_filters_nofilters: "لا يوجد مرشحات"
   components_filters_clearfilters: "مسح جميع المرشحات"
   groups_title: مجموعات
-  groups_headline: المجموعات / المناطق
-  groups_text: "كل منتج فريد من نوعه. كل الأعمال لديها شيء مختلف للعرض. مجموعاتنا هي مجموعات من المنتجين والمحاور والموزعين الذين يشتركون في شيء مثل الموقع أو سوق المزارعين أو الفلسفة. هذا يجعل تجربة التسوق أسهل. لذلك استكشف مجموعاتنا وقمنا بتنظيمها لك."
+  groups_headline: المجموعات
+  groups_text: "كل منتج فريد من نوعه. كل الأعمال لديها شيء مختلف للعرض. مجموعاتنا هي مجموعات من المنتجين ومراكز البيع والموزعين الذين يشتركون في خصلة مثل الموقع أو سوق المزارعين أو الفلسفة. هذا يجعل تجربة التسوق أسهل. لذلك استكشف مجموعاتنا التي قمنا بتنظيمها لك."
   groups_search: "البحث عن اسم أو كلمة أساسية"
   groups_no_groups: "لم يتم العثور على مجموعات"
   groups_about: "معلومات عنا"
