--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -23,6 +23,7 @@ pl:
         variant_unit_name: "Nazwa jednostki wariantu"
       spree/credit_card:
         base: "Karta kredytowa"
+        number: "Numer zamówienia"
       order_cycle:
         orders_close_at: Data zakończenia
       variant_override:
@@ -3033,7 +3034,6 @@ pl:
     inventory_error_flash_for_insufficient_quantity: "Produkt w Twoim koszyku stał się niedostępny."
     inventory: Zapasy
     zipcode: Kod pocztowy
-    weight: Waga (na kg)
     error_user_destroy_with_orders: "Nie można usunąć użytkowników ze zrealizowanymi zamówieniami"
     cannot_create_payment_without_payment_methods: "Nie możesz utworzyć płatności za zamówienie bez zdefiniowanych metod płatności."
     please_define_payment_methods: "Najpierw określ niektóre metody płatności."
