--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -23,6 +23,7 @@ en_US:
         variant_unit_name: "Variant Unit Name"
       spree/credit_card:
         base: "Credit Card"
+        number: "Number"
       order_cycle:
         orders_close_at: Close Date
       variant_override:
@@ -2988,6 +2989,9 @@ en_US:
     cannot_create_payment_without_payment_methods: "You cannot create a payment for an order without any payment methods defined."
     please_define_payment_methods: "Please define some payment methods first."
     options: "Options"
+    successfully_created: '%{resource} has been successfully created!'
+    successfully_updated: '%{resource} has been successfully updated!'
+    payment_processing_failed: "Payment could not be processed, please check the details you entered"
     actions:
       update: "Update"
     shared:
