--- a/config/locales/es_CO.yml
+++ b/config/locales/es_CO.yml
@@ -23,6 +23,7 @@ es_CO:
         variant_unit_name: "Nombre de la unidad de la variante"
       spree/credit_card:
         base: "Tarjeta de crédito"
+        number: "Número"
       order_cycle:
         orders_close_at: Fecha de cierre
       variant_override:
@@ -2974,11 +2975,13 @@ es_CO:
     inventory_error_flash_for_insufficient_quantity: "Un artículo de su carrito ya no está disponible."
     inventory: Inventario
     zipcode: Código postal
-    weight: Peso (en kg)
     error_user_destroy_with_orders: "Los usuarios con pedidos completados no pueden ser eliminados"
     cannot_create_payment_without_payment_methods: "No se puede crear un pago para una orden sin un método de pago definido."
     please_define_payment_methods: "Por favor definir métodos de pago primero."
     options: "Opciones"
+    successfully_created: '%{resource} se ha creado exitosamente!'
+    successfully_updated: '%{resource} ha sido actualizado exitosamente!'
+    payment_processing_failed: "No se pudo procesar el pago, por favor verifique los detalles que introdujo"
     actions:
       update: "Actualizar"
     shared:
