--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -23,6 +23,7 @@ tr:
         variant_unit_name: "Varyant Birim Adı"
       spree/credit_card:
         base: "Kredİ kartı"
+        number: "Numara"
       order_cycle:
         orders_close_at: BİTİŞ TARİHİ
       variant_override:
@@ -2983,11 +2984,13 @@ tr:
     inventory_error_flash_for_insufficient_quantity: "Sepetinizdeki bir ürün artık mevcut değil."
     inventory: Stok
     zipcode: posta kodu
-    weight: Ağırlık (kg başına)
     error_user_destroy_with_orders: "Siparişleri tamamlanmış kullanıcılar silinemez"
     cannot_create_payment_without_payment_methods: "Herhangi bir ödeme yöntemi belirlemeden bir sipariş oluşturamazsınız."
     please_define_payment_methods: "Lütfen önce ödeme bir yöntemi belirleyin."
     options: "Seçenekler"
+    successfully_created: '%{resource} BAŞARIYLA OLUŞTURULDU!'
+    successfully_updated: '%{resource} BAŞARIYLA GÜNCELLENDİ!'
+    payment_processing_failed: "Ödeme işlenemedi, lütfen girdiğiniz bilgileri kontrol edin"
     actions:
       update: "Güncelle"
     shared:
