--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -1875,7 +1875,6 @@ de_DE:
   shop_for_products_html: "Suche nach <span class=\"turquoise\">%{enterprise}</span> Produkten unter:"
   change_shop: "Laden ändern auf:"
   shop_at: "Kaufe jetzt bei:"
-  price_breakdown: "Vollständige Preisaufschlüsselung"
   admin_fee: "Gebühr Administration"
   sales_fee: "Gebühr Verkauf"
   packing_fee: "Gebühr Umverpackung"
@@ -2538,6 +2537,9 @@ de_DE:
           in Ihrem Warenkorb verringert. Das Folgende hat sich geändert:
       now_out_of_stock: ist jetzt ausverkauft.
       only_n_remainging: "Jetzt hat nur noch %{num} übrig."
+    shopfront:
+      variant:
+        add_to_cart: "Hinzufügen"
     variants:
       on_demand:
         'yes': "Auf Anfrage"
@@ -2828,15 +2830,6 @@ de_DE:
     smtp_send_copy_to_this_addresses: "Sendet eine Kopie aller ausgehenden Mails an diese Adresse. Bei mehreren Adressen trennen Sie diese durch Kommas."
     intercept_email_address: "E-Mail-Adresse abfangen"
     intercept_email_instructions: "Überschreiben Sie den E-Mail-Empfänger und ersetzen Sie ihn mit dieser Adresse."
-    image_settings: "Bildeinstellungen"
-    image_settings_warning: "Sie müssen die Miniaturbilder neu erstellen, wenn Sie die Büroklammerformate aktualisieren. Verwenden Sie dazu die Rake-Büroklammer: Refresh: thumbnails CLASS = Spree :: Image."
-    attachment_default_style: Anhänge-Stil
-    attachment_default_url: "Anhänge Standard-URL"
-    attachment_path: "Pfad der Anhänge"
-    attachment_styles: "Büroklammer-Stile"
-    attachment_url: "Anhänge-URL"
-    add_new_style: "Neuen Stil hinzufügen"
-    image_settings_updated: "Bildeinstellungen erfolgreich aktualisiert."
     tax_categories: "Steuerkategorien"
     listing_tax_categories: "Steuerkategorien auflisten"
     back_to_tax_categories_list: "Zurück zur Liste der Steuerkategorien"
