--- a/config/locales/es_CR.yml
+++ b/config/locales/es_CR.yml
@@ -1183,6 +1183,9 @@ es_CR:
         contact: "contactar"
         require_customer_login: "Sólo los clientes aprobados pueden acceder a esta tienda."
         require_customer_html: "Si desea comenzar a comprar aquí, por favor %{contact} %{enterprise} para preguntar acerca de incorporación."
+    products:
+      summary:
+        bulk: "Agrupar"
   card_could_not_be_updated: La tarjeta no se pudo actualizar
   card_could_not_be_saved: la tarjeta no se pudo guardar
   spree_gateway_error_flash_for_checkout: "Hubo un problema con su información de pago: %{error}"
@@ -1882,7 +1885,6 @@ es_CR:
   shop_for_products_html: "Comprar productos de <span class=\"turquoise\">%{enterprise}</span> en:"
   change_shop: "Cambiar de tienda a:"
   shop_at: "Comprar ahora en:"
-  price_breakdown: "Desglose de precios completo"
   admin_fee: "Comisión de administración"
   sales_fee: "Comisión de ventas"
   packing_fee: "Cuota de empaquetado"
@@ -2548,6 +2550,11 @@ es_CR:
           de los productos de su carrito se han reducido. Aquí está lo que ha cambiado:
       now_out_of_stock: está ahora fuera de inventario.
       only_n_remainging: "ahora solo hay %{num} restantes."
+    shopfront:
+      variant:
+        add_to_cart: "Añadir"
+      bulk_buy_modal:
+        max_quantity: "Cantidad máxima"
     variants:
       on_demand:
         'yes': "Bajo demanda"
@@ -2842,15 +2849,6 @@ es_CR:
     smtp_send_copy_to_this_addresses: "Envía una copia de todos los correos salientes a esta dirección. Para direcciones múltiples, sepárelas con comas."
     intercept_email_address: "Interceptar la dirección de correo electrónico"
     intercept_email_instructions: "Anular destinatario de correo electrónico y reemplazar con esta dirección."
-    image_settings: "Ajustes de imágen"
-    image_settings_warning: "Deberá regenerar las miniaturas si actualiza los estilos de paperclip. Utilize rake paperclip:refresh:thumbnails CLASS=Spree::Image para hacer esto."
-    attachment_default_style: Estilo de los archivos adjuntos
-    attachment_default_url: "URL predeterminada de los archivos adjuntos"
-    attachment_path: "Ruta de los archivos adjuntos"
-    attachment_styles: "Estilos de clip"
-    attachment_url: "URL de los archivos adjuntos"
-    add_new_style: "Añadir nuevo estilo"
-    image_settings_updated: "Configuración de la imagen se actualizó correctamente."
     tax_categories: "Categorías de impuestos"
     listing_tax_categories: "Listado de categorías de impuestos"
     back_to_tax_categories_list: "Volver a la lista de categorías de impuestos"
